--- a/elsarticle.cls
+++ b/elsarticle.cls
@@ -6,7 +6,7 @@
 %%
 %% elsarticle.dtx  (with options: `class')
 %% 
-%% Copyright 2007, 2008, 2009, 2010 Elsevier Ltd
+%% Copyright 2007-2018 Elsevier Ltd
 %% 
 %% This file is part of the 'Elsarticle Bundle'.
 %% -------------------------------------------
@@ -22,22 +22,25 @@
 %% given in the file `manifest.txt'.
 %% 
 %%
-%% $Id: elsarticle.dtx 26 2010-06-11 11:54:01Z rishi $
+%%
 %%
  \def\RCSfile{elsarticle}%
- \def\RCSversion{1.21}%
- \def\RCSdate{2010/06/11}%
+ \def\RCSversion{3.0}%
+ \def\RCSdate{2018/06/08}%
  \def\@shortjnl{\relax}
- \def\@journal{Elsevier Ltd} \def\@company{Elsevier Ltd}
+ \def\@journal{Elsevier Ltd}
+ \def\@company{Elsevier Ltd}
  \def\@issn{000-0000}
  \def\@shortjid{elsarticle}
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 \ProvidesClass{\@shortjid}[\RCSdate, \RCSversion: \@journal]
 \def\ABD{\AtBeginDocument}
 \newif\ifpreprint \preprintfalse
+\newif\ifnonatbib \nonatbibfalse
 \newif\iflongmktitle \longmktitlefalse
 \newif\ifnopreprintline \nopreprintlinefalse
-\newif\ifcorexist
+\newif\ifdoubleblind \doubleblindfalse
+
 \def\@blstr{1}
 \newdimen\@bls
 \@bls=\baselineskip
@@ -61,6 +64,7 @@
 \DeclareOption{authoryear}{\xdef\@biboptions{round,authoryear}}
 \DeclareOption{number}{\xdef\@biboptions{numbers}}
 \DeclareOption{numbers}{\xdef\@biboptions{numbers}}
+\DeclareOption{nonatbib}{\global\nonatbibtrue}
 \DeclareOption{longtitle}{\global\longmktitletrue}
 \DeclareOption{5p}{\xdef\jtype{5}\global\preprintfalse
   \ExecuteOptions{twocolumn}}
@@ -76,35 +80,61 @@
   \let\iiiint\relax
   \let\idotsint\relax
   \let\openbox\relax}}{\AtEndOfClass{\RequirePackage{times}}}}
-\ExecuteOptions{a4paper,10pt,oneside,onecolumn,number,preprint}
+
+\DeclareOption{endfloat}{\IfFileExists{endfloat.sty}
+   {\AtEndOfClass{\RequirePackage[markers]{endfloat}}}{}}
+\DeclareOption{endfloats}{\IfFileExists{endfloat.sty}
+   {\AtEndOfClass{\RequirePackage[markers]{endfloat}}}{}}
+\DeclareOption{numafflabel}
+   {\AtBeginDocument{\def\theaffn{\arabic{affn}}}} %*%
+\DeclareOption{lefttitle}
+   {\AtBeginDocument{\def\elsarticletitlealign{flushleft}}} %*%
+\DeclareOption{centertitle}
+   {\AtBeginDocument{\def\elsarticletitlealign{center}}} %*%
+\DeclareOption{reversenotenum}
+   {\AtBeginDocument{\def\theaffn{\arabic{affn}}
+    \def\thefnote{\alph{fnote}}}}
+\DeclareOption{doubleblind}{\doubleblindtrue}
+
+\ExecuteOptions{a4paper,10pt,oneside,onecolumn,number,preprint,centertitle}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{article}}
 \ProcessOptions
 \LoadClass{article}
 \RequirePackage{graphicx}
 \let\comma\@empty
 \let\tnotesep\@empty
-\def\title#1{\gdef\@title{#1}}
 \let\@title\@empty
+
+\def\useelstitle{}
+
+\def\title#1{\g@addto@macro\@title{#1%
+       \global\let\tnoteref\@gobble}%
+       \g@addto@macro\useelstitle{#1}}
 
 \def\elsLabel#1{\@bsphack\protected@write\@auxout{}%
          {\string\Newlabel{#1}{\@currentlabel}}\@esphack}
 \def\Newlabel#1#2{\expandafter\xdef\csname X@#1\endcsname{#2}}
 
-\def\elsRef#1{\@ifundefined{X@#1}{0}{\csname X@#1\endcsname}%
-}
+\def\elsRef#1{\@ifundefined{X@#1}{0}{\csname X@#1\endcsname}}
 
-\def\tnotemark[#1]{\textsuperscript{\@for\@@tmark:=#1\do{%
-      \edef\tnotenum{\@ifundefined{X@\@@tmark}{1}{\elsRef{\@@tmark}}}%
-      \ifcase\tnotenum\or\ding{73}\or,\ding{73}\ding{73}\fi}}%
-}
 \let\@tnotemark\@empty
 
+\ifdoubleblind
+  \def\tnotemark[#1]{}
+\else
+  \def\tnotemark[#1]{\@for\mytmark:=#1\do{%
+       \expandafter\ifcase\csname X@\mytmark\endcsname\or$^{\star}$\or
+       $^{,\star\star}$\fi
+    }%
+}
+\fi
+
+\def\tnoteref#1{\tnotemark[{#1}]}
 \let\@tnotes\@empty
-\RequirePackage{pifont}
 \newcounter{tnote}
 \def\tnotetext[#1]#2{\g@addto@macro\@tnotes{%
-  \refstepcounter{tnote}\elsLabel{#1}%
-   \def\thefootnote{\ifcase\c@tnote\or\ding{73}\or\ding{73}\ding{73}\fi}%
+  \stepcounter{tnote}\elsLabel{#1}%
+    \def\thefootnote{\ifcase\c@tnote\or$\star$\or$\star\star$\fi}%
     \footnotetext{#2}}}
 
 \let\@nonumnotes\@empty
@@ -112,17 +142,20 @@
      \let\thefootnote\relax\footnotetext{#1}}}
 
 \newcounter{fnote}
+\def\thefnote{\arabic{fnote}}
 \def\fnmark[#1]{\let\comma\@empty
     \def\@fnmark{\@for\@@fnmark:=#1\do{%
     \edef\fnotenum{\@ifundefined{X@\@@fnmark}{1}{\elsRef{\@@fnmark}}}%
   \unskip\comma\fnotenum\let\comma,}}%
 }
 
+\def\fnref#1{\fnmark[#1]}
+
 \let\@fnotes\@empty\let\@fnmark\@empty
 \def\fntext[#1]#2{\g@addto@macro\@fnotes{%
-     \refstepcounter{fnote}\elsLabel{#1}%
-   \def\thefootnote{\thefnote}%
-   \global\setcounter{footnote}{\thefnote}%
+   \refstepcounter{fnote}\elsLabel{#1}%
+   \def\thefootnote{\c@fnote}%
+   \global\setcounter{footnote}{\c@fnote}%
    \footnotetext{#2}}}
 
 \def\cormark[#1]{\edef\cnotenum{\elsRef{#1}}%
@@ -132,25 +165,22 @@
 \let\@cormark\@empty
 \let\@cornotes\@empty
 \newcounter{cnote}
-\def\cortext[#1]#2{\global\corexisttrue\g@addto@macro\@cornotes{%
+\def\cortext[#1]#2{\g@addto@macro\@cornotes{%
     \refstepcounter{cnote}\elsLabel{#1}%
     \def\thefootnote{\ifcase\thecnote\or$\ast$\or
     $\ast\ast$\fi}%
     \footnotetext{#2}}}
 
 \let\@corref\@empty
-\def\corref#1{\global\corexisttrue\edef\cnotenum{\elsRef{#1}}%
+\def\corref#1{\edef\cnotenum{\elsRef{#1}}%
     \edef\@corref{\ifcase\cnotenum\or
          $\ast$\or$\ast\ast$\fi\hskip-1pt}}
-
-\def\fnref#1{\fnmark[#1]}
-\def\tnoteref#1{\tnotemark[#1]}
 
 \def\resetTitleCounters{\c@cnote=0
    \c@fnote=0 \c@tnote=0 \c@footnote=0}
 
 \let\eadsep\@empty
-\let\@elseads\@empty
+\def\@elseads{}
 \let\@elsuads\@empty
 \let\@cormark\@empty
 \def\hashchar{\expandafter\@gobble\string\~}
@@ -158,36 +188,43 @@
 \def\lbracechar{\expandafter\@gobble\string\{}
 \def\rbracechar{\expandafter\@gobble\string\}}
 
-\def\ead{\@ifnextchar[{\@uad}{\@ead}}
-\gdef\@ead#1{\bgroup\def\_{\string\underscorechar\space}%
-  \def\{{\string\lbracechar\space}%
-   \def~{\hashchar\space}%
-   \def\}{\string\rbracechar\space}%
-   \edef\tmp{\the\@eadauthor}
+\gdef\ead{\@ifnextchar[{\@uad}{\@ead}}
+\gdef\@ead#1{\bgroup
+   \def\_{\underscorechar}%
+   \def\{{\lbracechar}%
+   \def~{\hashchar}%
+   \def\}{\rbracechar}%
+   \edef\tmp{\the\@eadauthor}%
    \immediate\write\@auxout{\string\emailauthor
      {#1}{\expandafter\strip@prefix\meaning\tmp}}%
-  \egroup
+   \egroup
 }
 \newcounter{ead}
 \gdef\emailauthor#1#2{\stepcounter{ead}%
      \g@addto@macro\@elseads{\raggedright%
-      \let\corref\@gobble
-      \eadsep{#1} (#2).\def\eadsep{\unskip,\space}}%
+      \let\corref\@gobble\def\@@tmp{#1}%
+      \eadsep{\ttfamily\expandafter\strip@prefix\meaning\@@tmp}
+      (#2)\def\eadsep{\unskip,\space}}%
 }
 \gdef\@uad[#1]#2{\bgroup
-  \def~{\string\hashchar\space}%
-  \def\_{\string\underscorechar\space}%
+   \def~{\hashchar}%
+   \def\_{\underscorechar}%
+   \def~{\hashchar}%
+   \def\}{\rbracechar}%
    \edef\tmp{\the\@eadauthor}
    \immediate\write\@auxout{\string\urlauthor
      {#2}{\expandafter\strip@prefix\meaning\tmp}}%
   \egroup
 }
-\def\urlauthor#1#2{\g@addto@macro\@elsuads{\let\corref\@gobble%
-     \raggedright\eadsep{#1}\space(#2)%
+\gdef\urlauthor#1#2{\g@addto@macro\@elsuads{\let\corref\@gobble%
+     \def\@@tmp{#1}\raggedright\eadsep
+     {\ttfamily\expandafter\strip@prefix\meaning\@@tmp}\space(#2)%
      \def\eadsep{\unskip,\space}}%
 }
 
 \def\elsauthors{}
+\def\useauthors{}
+
 \def\pprinttitle{}
 \let\authorsep\@empty
 \let\sep\@empty
@@ -197,7 +234,7 @@
 \newtoks\@eadauthor
 \def\@@author[#1]#2{\g@addto@macro\elsauthors{%
     \def\baselinestretch{1}%
-    \authorsep#2\,\unskip\textsuperscript{%#1%
+    \authorsep#2\unskip\textsuperscript{%#1%
       \@for\@@affmark:=#1\do{%
        \edef\affnum{\@ifundefined{X@\@@affmark}{1}{\elsRef{\@@affmark}}}%
      \unskip\sep\affnum\let\sep=,}%
@@ -207,7 +244,8 @@
     \def\authorsep{\unskip,\space}%
     \global\let\sep\@empty\global\let\@corref\@empty
     \global\let\@fnmark\@empty}%
-    \@eadauthor={#2}
+    \@eadauthor={#2}%
+    \g@addto@macro\useauthors{#2; }%
 }
 
 \def\@author#1{\g@addto@macro\elsauthors{\normalsize%
@@ -218,25 +256,21 @@
       }%
     \def\authorsep{\unskip,\space}%
     \global\let\@fnmark\@empty
-    \global\let\@corref\@empty
-    \global\let\sep\@empty}%
-    \@eadauthor={#1}
+    \global\let\@corref\@empty    \global\let\sep\@empty}%
+    \@eadauthor={#1}%
+    \g@addto@macro\useauthors{#1; }%
+}
+
+\AtBeginDocument{%
+  \@ifpackageloaded{hyperref}{%
+    \expandafter\gdef\csname Hy@title\endcsname{\useelstitle}%
+    \expandafter\gdef\csname Hy@author\endcsname{\useauthors}%
+   }{}
 }
 
 \def\elsaddress{}
 \def\addsep{\par\vskip6pt}
 \def\address{\@ifnextchar[{\@@address}{\@address}}
-
-%%%%%%%%%\def\correspondingauthor{\@ifnextchar[{\@correspondingauthor}{\@correspondingauthor[]}}
-%%%%%%%%%\def\@correspondingauthor[#1]#2{{\renewcommand\thefootnote{}%
-%%%%%%%%%\footnotetext[-1]{\hspace*{-6.5pt}{${\smash{\raise2pt\hbox{$#1$}}}$}\kern4pt\footnotesize#2}}}%
-
-\def\correspondingauthor{\@ifnextchar[{\@correspondingauthor}{\@correspondingauthor[]}}
-\def\@correspondingauthor[#1]#2{{\renewcommand\thefootnote{}\let\qtoa\Qtoa%
-\footnotetext[-1]{\hspace*{-12pt}\hbox to 12pt{\hfill{$^{\smash{#1}}$}\hskip3pt}\footnotesize#2}\par\vspace*{1pt}}}%
-
-\def\email#1{\global\corexisttrue{\renewcommand\thefootnote{}%
-\footnotetext[-1]{{\itshape E-mail address:}\ #1\par\vspace*{12pt}}}}%
 
 \def\@alph#1{%
   \ifcase#1\or a\or b\or c\or d\or e\or f\or g\or h\or i\or j\or k\or
@@ -273,7 +307,7 @@
      \refstepcounter{affn}
      \xdef\@currentlabel{\theaffn}
      \elsLabel{#1}%
-    \textsuperscript{\theaffn}#2\par\vspace*{.5pt}}}
+    \textsuperscript{\theaffn}#2\par}}
 
 \long\def\@address#1{\g@addto@macro\elsauthors{%
     \def\baselinestretch{1}%
@@ -281,13 +315,21 @@
     \def\authorsep{\par\vskip8pt}}}
 
 \newbox\absbox
+\let\@elsarticleabstitle\@empty %*%
+\def\abstracttitle#1{\gdef\@elsarticleabstitle{#1}} %*%
+\abstracttitle{Abstract} %*%
 \renewenvironment{abstract}{\global\setbox\absbox=\vbox\bgroup
   \hsize=\textwidth\def\baselinestretch{1}%
-  \noindent\unskip\textbf{Abstract}
+  \noindent\unskip\textbf{\@elsarticleabstitle} %*%
  \par\medskip\noindent\unskip\ignorespaces}
  {\egroup}
 
 \newbox\keybox
+\let\@elsarticlekwdtitle\@empty %*%
+\def\keywordtitle#1{\gdef\@elsarticlekwdtitle{#1}} %*%
+\def\keywordtitlesep#1{\gdef\@elsarticlekeywordtitlesep{#1}} %*%
+\keywordtitle{Keywords} %*%
+\keywordtitlesep{:\ }
 \def\keyword{%
   \def\sep{\unskip, }%
  \def\MSC{\@ifnextchar[{\@MSC}{\@MSC[2000]}}
@@ -297,7 +339,7 @@
   \global\setbox\keybox=\vbox\bgroup\hsize=\textwidth
   \normalsize\normalfont\def\baselinestretch{1}
   \parskip\z@
-  \noindent\textit{Keywords: }
+  \noindent\textit{\@elsarticlekwdtitle\@elsarticlekeywordtitlesep}
   \raggedright                         % Keywords are not justified.
   \ignorespaces}
 \def\endkeyword{\par \egroup}
@@ -307,42 +349,66 @@
 
 \def\printFirstPageNotes{%
   \iflongmktitle
-   \let\columnwidth=\textwidth\fi
+    \let\columnwidth=\textwidth
+  \fi
+\ifdoubleblind
+\else
   \ifx\@tnotes\@empty\else\@tnotes\fi
   \ifx\@nonumnotes\@empty\else\@nonumnotes\fi
- \ifx\@cornotes\@empty\else\@cornotes\fi
+  \ifx\@cornotes\@empty\else\@cornotes\fi
   \ifx\@elseads\@empty\relax\else
    \let\thefootnote\relax
    \footnotetext{\ifnum\theead=1\relax
-      \textit{E-mail address:\space}\else
-      \textit{E-mail addresses:\space}\fi
-     \@elseads\vspace*{11pt}}\fi
+      \textit{Email address:\space}\else
+      \textit{Email addresses:\space}\fi
+     \@elseads}\fi
   \ifx\@elsuads\@empty\relax\else
    \let\thefootnote\relax
    \footnotetext{\textit{URL:\space}%
      \@elsuads}\fi
+\fi
   \ifx\@fnotes\@empty\else\@fnotes\fi
   \iflongmktitle\if@twocolumn
    \let\columnwidth=\Columnwidth\fi\fi
 }
+
+%% Pushing text to begin on newpage %*%
+\def\newpage@after@title{title}
+\def\newpage@after@author{author}
+\def\newpage@after@abstract{abstract}
+\def\newpageafter#1%
+    {\gdef\@elsarticlenewpageafter{#1}}
 
 \long\def\pprintMaketitle{\clearpage
   \iflongmktitle\if@twocolumn\let\columnwidth=\textwidth\fi\fi
   \resetTitleCounters
   \def\baselinestretch{1}%
   \printFirstPageNotes
-  \begin{center}%
+  \begin{\elsarticletitlealign}%
  \thispagestyle{pprintTitle}%
    \def\baselinestretch{1}%
-    \Large\@title\par\vskip18pt
-    \normalsize\elsauthors\par\vskip10pt
-    \footnotesize\itshape\elsaddress\par\vskip36pt
+    \Large\@title\par\vskip18pt%
+    \ifx\@elsarticlenewpageafter\newpage@after@title% %*%
+      \newpage
+    \fi%
+    \ifdoubleblind
+      \vspace*{2pc}
+    \else
+      \normalsize\elsauthors\par\vskip10pt
+      \footnotesize\itshape\elsaddress\par\vskip36pt
+    \fi
+    \ifx\@elsarticlenewpageafter\newpage@after@author% %*%
+      \newpage
+    \fi%
     \hrule\vskip12pt
     \ifvoid\absbox\else\unvbox\absbox\par\vskip10pt\fi
     \ifvoid\keybox\else\unvbox\keybox\par\vskip10pt\fi
     \hrule\vskip12pt
-    \end{center}%
-  \gdef\thefootnote{\arabic{footnote}}%
+    \ifx\@elsarticlenewpageafter\newpage@after@abstract% %*%
+      \newpage
+    \fi%
+    \end{\elsarticletitlealign}%
+    \gdef\thefootnote{\arabic{footnote}}%
   }
 
 \def\printWarning{%
@@ -365,17 +431,21 @@
 \long\def\MaketitleBox{%
   \resetTitleCounters
   \def\baselinestretch{1}%
-  \begin{center}%
+  \begin{\elsarticletitlealign}%
    \def\baselinestretch{1}%
     \Large\@title\par\vskip18pt
+  \ifdoubleblind
+    \vspace*{2pc}
+  \else
     \normalsize\elsauthors\par\vskip10pt
     \footnotesize\itshape\elsaddress\par\vskip36pt
+  \fi
     \hrule\vskip12pt
     \ifvoid\absbox\else\unvbox\absbox\par\vskip10pt\fi
     \ifvoid\keybox\else\unvbox\keybox\par\vskip10pt\fi
     \hrule\vskip12pt
-    \end{center}%
-  }
+    \end{\elsarticletitlealign}%
+}
 
 \def\FNtext#1{\par\bgroup\footnotesize#1\egroup}
 \newdimen\space@left
@@ -383,6 +453,39 @@
              \typeout{#1}%
              \typeout{******************************}%
 }
+
+\def\titlespancalculator#1#2#3#4{%
+  % break count
+  \@tempcnta=#4\relax%
+  % pagebreakcount increment
+  \advance\@tempcnta by 1\relax%
+  % title page height
+  \@tempdima=#1\relax%
+  % Page height - title page notes height (only for first break)
+  % Page height - textheight (for remaining breaks)
+  % Page height - title page notes height
+  \@tempdimb=#2\relax%
+  % Remaining title page height
+  \advance\@tempdima -\the\@tempdimb%
+  % Checks if remaining title page
+  % height less than textheight
+  \ifdim\the\@tempdima>#3\relax%
+     \titlespancalculator%
+      {\the\@tempdima}{#3}{#3}{\the\@tempcnta}%Break again
+  \else%
+  % Save break count and exit.
+     \xdef\savetitlepagespan{\the\@tempcnta}%
+  \fi%
+}%
+
+\long\def\myfor#1#2#3{%
+  \@tempcnta=#1\relax%
+  \ifnum#1<#2\relax%
+    \advance\@tempcnta by 1\relax%
+    #3%
+    \myfor{\the\@tempcnta}{#2}{#3}%
+  \fi}
+
 \long\def\getSpaceLeft{%\global\@twocolumnfalse%
    \global\setbox0=\vbox{\hsize=\textwidth\MaketitleBox}%
    \global\setbox1=\vbox{\hsize=\textwidth
@@ -393,6 +496,9 @@
     \@tempdima=\vsize
     \advance\@tempdima-\noteheight
     \advance\@tempdima-1\baselineskip
+    \xdef\savefpageheight{\the\@tempdima}%
+    \setbox2=\vbox{\titlespancalculator{\titleheight}%
+       {\savefpageheight}{\textheight}{0}}%
 }
 
   \skip\footins=24pt
@@ -406,10 +512,19 @@
    \ifnum\jtype=1
     \def\maketitle{%
       \iflongmktitle\getSpaceLeft
+        \ifdim\noteheight>0pt%
+    \advance\@tempdima-1.35\baselineskip
+        \fi%
        \global\setbox\els@boxa=\vsplit0 to \@tempdima
        \box\els@boxa\par\resetTitleCounters
        \thispagestyle{pprintTitle}%
        \printFirstPageNotes
+       \ifnum\savetitlepagespan>1\relax%
+       \myfor{2}{\savetitlepagespan}{%
+       \global\setbox\els@boxb=\vsplit0 to \textheight%\@tempdima
+       \box\els@boxb}
+       \else%
+       \fi%
        \box0%
       \else
        \finalMaketitle\printFirstPageNotes
@@ -419,10 +534,19 @@
  \ifnum\jtype=5
     \def\maketitle{%
       \iflongmktitle\getSpaceLeft
+        \ifdim\noteheight>0pt%
+    \advance\@tempdima-1.35\baselineskip
+        \fi%
        \global\setbox\els@boxa=\vsplit0 to \@tempdima
        \box\els@boxa\par\resetTitleCounters
        \thispagestyle{pprintTitle}%
        \printFirstPageNotes
+       \ifnum\savetitlepagespan>1\relax%
+       \myfor{2}{\savetitlepagespan}{%
+       \global\setbox\els@boxb=\vsplit0 to \textheight%\@tempdima
+       \twocolumn[\box\els@boxb]}
+       \else%
+       \fi%
        \twocolumn[\box0]%\printFirstPageNotes
       \else
        \twocolumn[\finalMaketitle]\printFirstPageNotes
@@ -431,11 +555,20 @@
   \else
   \if@twocolumn
     \def\maketitle{%
-      \iflongmktitle\getSpaceLeft
+        \iflongmktitle\getSpaceLeft
+          \ifdim\noteheight>0pt%
+    \advance\@tempdima-1.35\baselineskip
+        \fi%
        \global\setbox\els@boxa=\vsplit0 to \@tempdima
        \box\els@boxa\par\resetTitleCounters
        \thispagestyle{pprintTitle}%
        \printFirstPageNotes
+       \ifnum\savetitlepagespan>1\relax%
+       \myfor{2}{\savetitlepagespan}{%
+       \global\setbox\els@boxb=\vsplit0 to \textheight%\@tempdima
+       \twocolumn[\box\els@boxb]}
+       \else%
+       \fi%
        \twocolumn[\box0]%
       \else
        \twocolumn[\finalMaketitle]\printFirstPageNotes
@@ -444,36 +577,76 @@
    \else
     \def\maketitle{%
       \iflongmktitle\getSpaceLeft
+        \ifdim\noteheight>0pt%
+    \advance\@tempdima-1.35\baselineskip
+        \fi%
        \global\setbox\els@boxa=\vsplit0 to \@tempdima
        \box\els@boxa\par\resetTitleCounters
        \thispagestyle{pprintTitle}%
        \printFirstPageNotes
+       \ifnum\savetitlepagespan>1\relax%
+       \myfor{2}{\savetitlepagespan}{%
+       \global\setbox\els@boxb=\vsplit0 to \textheight%\@tempdima
+       \box\els@boxb}
+       \else%
+       \fi%
        \box0%
      \else
        \finalMaketitle\printFirstPageNotes
       \fi
-    \gdef\thefootnote{\arabic{footnote}}\vskip15pt}%
+    \gdef\thefootnote{\arabic{footnote}}}%
    \fi
   \fi
  \fi
 \fi
+
+\let\@elsarticlemyfooter\@empty
+\let\@elsarticlemyfooteralign\@empty
+\def\@elsarticlemyfooteralignleft{L}
+\def\@elsarticlemyfooteralignright{R}
+\def\@elsarticlemyfooteraligncenter{C}
+
+\def\myfooter[#1]#2 %*%
+      {\gdef\@elsarticlemyfooteralign{#1}
+       \gdef\@elsarticlemyfooter{#2}}
+
+\def\myfooterfont#1{\gdef\@myfooterfont{#1}}
+\myfooterfont{\footnotesize\itshape}
 \def\ps@pprintTitle{%
      \let\@oddhead\@empty
      \let\@evenhead\@empty
-     \def\@oddfoot{\ifnopreprintline\relax\else\footnotesize\itshape
-       Preprint submitted to \ifx\@journal\@empty Elsevier
-       \else\@journal\fi\hfill\@date\fi}%
+     \def\@oddfoot
+       {\hbox to \textwidth%
+        {\ifnopreprintline\relax\else
+        \@myfooterfont%
+         \ifx\@elsarticlemyfooteralign\@elsarticlemyfooteraligncenter%
+           \hfil\@elsarticlemyfooter\hfil%
+         \else%
+         \ifx\@elsarticlemyfooteralign\@elsarticlemyfooteralignleft%
+           \@elsarticlemyfooter\hfill{}%
+         \else%
+         \ifx\@elsarticlemyfooteralign\@elsarticlemyfooteralignright%
+           {}\hfill\@elsarticlemyfooter%
+         \else%
+               Preprint submitted to \ifx\@journal\@empty%
+                 Elsevier%
+            \else\@journal\fi\hfill\@date\fi%
+         \fi%
+         \fi%
+         \fi%
+         }
+       }%
      \let\@evenfoot\@oddfoot}
 \def\@seccntDot{.}
 \def\@seccntformat#1{\csname the#1\endcsname\@seccntDot\hskip 0.5em}
 
 \renewcommand\section{\@startsection {section}{1}{\z@}%
            {18\p@ \@plus 6\p@ \@minus 3\p@}%
-           {12.2\p@}% \@plus 6\p@ \@minus 3\p@}%
+           {9\p@ \@plus 6\p@ \@minus 3\p@}%
            {\normalsize\bfseries\boldmath}}
 \renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
            {12\p@ \@plus 6\p@ \@minus 3\p@}%
-           {12\p@}% \@plus 6\p@ \@minus 3\p@}%
+           {3\p@ \@plus 6\p@ \@minus 3\p@}%
            {\normalfont\normalsize\itshape}}
 \renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
            {12\p@ \@plus 6\p@ \@minus 3\p@}%
@@ -514,12 +687,14 @@
              \fi\fi\fi\fi\fi\fi\fi\fi
   \@tempa}
 \newlength{\@sep} \newlength{\@@sep}
-\setlength{\@sep}{12pt}%.5\baselineskip plus.2\baselineskip minus.2\baselineskip}
-\setlength{\@@sep}{12pt}%.1\baselineskip plus.01\baselineskip minus.05\baselineskip}
+\setlength{\@sep}{.5\baselineskip plus.2\baselineskip
+            minus.2\baselineskip}
+\setlength{\@@sep}{.1\baselineskip plus.01\baselineskip
+            minus.05\baselineskip}
 \providecommand{\sfbc}{\rmfamily\upshape}
 \providecommand{\sfn}{\rmfamily\upshape}
 \def\@enfont{\ifnum \@enumdepth >1\let\@nxt\sfn \else\let\@nxt\sfbc \fi\@nxt}
-\def\enumerate{\par%
+\def\enumerate{%
    \ifnum \@enumdepth >3 \@toodeep\else
       \advance\@enumdepth \@ne
       \edef\@enumctr{enum\romannumeral\the\@enumdepth}\fi
@@ -539,53 +714,30 @@
 \def\@enum@{\list{{\@enfont\csname label\@enumctr\endcsname}}%
            {\usecounter{\@enumctr}\def\makelabel##1{\hss\llap{##1}}%
      \ifnum \@enumdepth>1\setlength{\topsep}{\@@sep}\else
-           \setlength{\topsep}{12pt}\fi
-     \ifnum \@enumdepth>1\setlength{\itemsep}{0pt}% plus1pt minus1pt}%
-      \else \setlength{\itemsep}{0pt}\fi
-     \setlength\leftmargin{\leftMargin}%%%{1.8em}
-     \setlength{\parsep}{0pt}%plus1pt minus1pt}%
-     \setlength{\parskip}{0pt}%plus1pt minus1pt}
-     \setlength{\topsep}{10pt}%plus1pt minus1pt}
-     %\leftskip0pt
-     }}
+           \setlength{\topsep}{\@sep}\fi
+     \ifnum \@enumdepth>1\setlength{\itemsep}{0pt plus1pt minus1pt}%
+      \else \setlength{\itemsep}{\@@sep}\fi
+     %\setlength\leftmargin{\leftMargin}%%%{1.8em}
+     \setlength{\parsep}{0pt plus1pt minus1pt}%
+     \setlength{\parskip}{0pt plus1pt minus1pt}
+                   }}
 
 \def\endenumerate{\par\ifnum \@enumdepth >1\addvspace{\@@sep}\else
            \addvspace{\@sep}\fi \endlist}
 
 \def\sitem{\@noitemargtrue\@item[\@itemlabel *]}
 
-
-\newskip\abovelistskipi\abovelistskipi12pt% plus2pt
-\newskip\belowlistskipi\belowlistskipi12pt% plus2pt
-\newskip\abovelistskipii\abovelistskipii0pt%
-\newskip\belowlistskipii\belowlistskipii0pt%
-\newskip\abovelistskipiii\abovelistskipiii0pt%
-\newskip\belowlistskipiii\belowlistskipiii0pt%
-\newskip\abovelistskipiv\abovelistskipiv0pt%
-\newskip\belowlistskipiv\belowlistskipiv0pt%
-\newskip\abovelistskipv\abovelistskipv0pt%
-\newskip\belowlistskipv\belowlistskipv0pt%
-
 \def\itemize{\@ifnextchar[{\@Itemize}{\@Itemize[]}}
 
 \def\@Itemize[#1]{\def\next{#1}%
   \ifnum \@itemdepth >\thr@@\@toodeep\else
-    \setlength{\itemsep}{0pt}
-    \setlength{\parsep}{0pt}
    \advance\@itemdepth\@ne
   \ifx\next\@empty\else\expandafter\def\csname
    labelitem\romannumeral\the\@itemdepth\endcsname{#1}\fi%
   \edef\@itemitem{labelitem\romannumeral\the\@itemdepth}%
   \expandafter\list\csname\@itemitem\endcsname
-  {%
-  \topsep\csname abovelistskip\romannumeral\the\@itemdepth\endcsname%\fi
-  \def\makelabel##1{\hss\llap{##1}}}%
- \fi\itemsep0pt\parsep0pt\parskip0pt}
-
-\def\enditemize{%
-\@topsepadd\csname belowlistskip\romannumeral\the\@itemdepth\endcsname%\fi
-\endlist}
- 
+  {\def\makelabel##1{\hss\llap{##1}}}%
+ \fi}
 \def\newdefinition#1{%
   \@ifnextchar[{\@odfn{#1}}{\@ndfn{#1}}}%]
 \def\@ndfn#1#2{%
@@ -674,16 +826,16 @@
 
 \@ifundefined{@biboptions}{\xdef\@biboptions{numbers}}{}
 \InputIfFileExists{\jobname.spl}{}{}
-\RequirePackage[\@biboptions]{natbib}
-
+\ifnonatbib\relax\else
+  \RequirePackage[\@biboptions]{natbib}
+\fi
 \newwrite\splwrite
 \immediate\openout\splwrite=\jobname.spl
 \def\biboptions#1{\def\next{#1}\immediate\write\splwrite{%
    \string\g@addto@macro\string\@biboptions{%
     ,\expandafter\strip@prefix\meaning\next}}}
-%\renewcommand\NAT@open{}\renewcommand\NAT@close{}
-\let\baselinestretch=\@blstr
 
+\let\baselinestretch=\@blstr
 \ifnum\jtype=1
  \RequirePackage{geometry}
  \geometry{twoside,
@@ -741,7 +893,7 @@
 \fi\fi\fi
 \def\journal#1{\gdef\@journal{#1}}
  \let\@journal\@empty
-\newenvironment{frontmatter}{}{\maketitle\ifcorexist \enlargethispage{-4mm}\else\enlargethispage{-12mm}\fi}
+\newenvironment{frontmatter}{}{\maketitle}
 
 \long\def\@makecaption#1#2{%
   \vskip\abovecaptionskip\footnotesize
@@ -788,25 +940,11 @@
   \gdef\thefigure{\@Alph\c@section.\arabic{figure}}%
   \gdef\thetable{\@Alph\c@section.\arabic{table}}%
   \gdef\thesection{\appendixname~\@Alph\c@section}%
-  \gdef\thesubsection{\@Alph\c@section.\arabic{subsection}}%
   \@addtoreset{equation}{section}%
   \gdef\theequation{\@Alph\c@section.\arabic{equation}}%
   \addtocontents{toc}{\string\let\string\numberline\string\tmptocnumberline}{}{}
 }
 
-\def\appendixname{Appendix }
-\newcommand\normalMode{\par
-  \setcounter{section}{0}%
-  \setcounter{subsection}{0}%
-  \setcounter{equation}{0}
-  \gdef\thefigure{\@Alph\c@section.\arabic{figure}}%
-  \gdef\thetable{\@Alph\c@section.\arabic{table}}%
-  \gdef\thesection{\@arabic\c@section}%
-  \gdef\thesubsection{\c@section.\arabic{subsection}}%
-  \@addtoreset{equation}{section}%
-  \gdef\theequation{\@Alph\c@section.\arabic{equation}}%
-  \addtocontents{toc}{\string\let\string\numberline\string\tmptocnumberline}{}{}
-}
 %%%% \numberline width calculation for appendix.
 \newdimen\appnamewidth
 \def\tmptocnumberline#1{%
@@ -829,61 +967,30 @@
 }}}
 %%
 %% Added for avoiding clash with cleveref.sty
-
 \@ifpackageloaded{cleveref}%
  {}
  {\def\tnotetext[#1]#2{\g@addto@macro\@tnotes{%
     \refstepcounter{tnote}%
     \immediate\write\@auxout{\string\Newlabel{#1}{\thetnote}}
-    \def\thefootnote{\ifcase\c@tnote\or\ding{73}\or\ding{73}\ding{73}\fi}%
+    \def\thefootnote{\ifcase\c@tnote\or$\star$\or$\star\star$\fi}%
     \footnotetext{#2}}}
 %%%
   \def\fntext[#1]#2{\g@addto@macro\@fnotes{%
     \refstepcounter{fnote}%
     \immediate\write\@auxout{\string\Newlabel{#1}{\thefnote}}
     \def\thefootnote{\thefnote}%
-    \global\setcounter{footnote}{\thefnote}%
+    \global\setcounter{footnote}{\c@fnote}%
     \footnotetext{#2}}}
 %%%
-  \def\cortext[#1]#2{\g@addto@macro\@cornotes{\hspace*{-12pc}%
+  \def\cortext[#1]#2{\g@addto@macro\@cornotes{%
     \refstepcounter{cnote}%
     \immediate\write\@auxout{\string\Newlabel{#1}{\thecnote}}
-    \def\thefootnote{\ifcase\thecnote\or$\ast$\or
+    \def\thefootnote{\ifcase\c@cnote\or$\ast$\or
     $\ast\ast$\fi}%
-    \footnotetext{#2 \vspace*{.5pt}}}}
+    \footnotetext{#2}}}
 }
-%%
-\newbox\tempbox%
-\newenvironment{nomenclature}{\par\vskip6pt plus1pt\setbox\tempbox\vbox\bgroup\if@twocolumn\hsize17.5pc\else\hsize37.3pc\fi\vspace*{-17.7pt}\section*{Nomenclature}}{\egroup\par\noindent\fboxsep10pt\fbox{\box\tempbox}\vskip6pt}
-\def\deflist{\@ifnextchar[{\@deflist}{\@deflist[]}}
-\newbox\defbox%
-\newdimen\defboxdimen%
-\def\@deflist[#1]{%
-\setbox\defbox\hbox{#1:\quad}%
-\defboxdimen\wd\defbox%
-\def\tempa{#1}%
-\par\addvspace{12pt plus2pt minus2pt}%
-\setlength\parindent{0pt}%
-\def\deftitle##1{{\noindent\itshape##1}\par}%\fontsize{12}{12}\selectfont
-\ifx\tempa\@empty%
-\def\defitem##1{\@hangfrom{##1\ }}%%%
-\else%
-\def\defitem##1{\@hangfrom{\hbox to \defboxdimen{##1\quad}}}%%
-\fi%
-\def\defterm##1{##1\par}
-}
-%
-\def\enddeflist{\par\addvspace{8pt plus2pt minus2pt}}
-%
 
-
-
-
+\def\textmarker#1#2{\textcolor{#1}{#2}}%*%
 \endinput
-
-
-
 %%
-
-
 %% End of file `elsarticle.cls'.
