--- a/paper.tex
+++ b/paper.tex
@@ -1,22 +1,51 @@
-%% The '3p' and 'times' class options of elsarticle are used for Elsevier CRC
-%% The 'procedia' option causes ecrc to approximate to the Word template
-\documentclass[3p,times,procedia]{elsarticle}
-\flushbottom
+\documentclass[preprint,5p,times,twocolumn,authoryear]{elsarticle}
 
-%% The `ecrc' package must be called to make the CRC functionality available
-\usepackage{ecrc}
+\usepackage{amssymb,amsmath,bbm}
+\usepackage{url}
 
-\input{header.tex}
+%%%%%
+% variable to include comments or not in the compilation ; set to 1 to include
+\def \draft {1}
 
-%\runauth{Raimbault et al.}
-\runauth{}
+\usepackage{xparse}
+\usepackage{ifthen}
+\DeclareDocumentCommand{\comment}{m o o o o}
+{\ifthenelse{\draft=1}{
+    \textcolor{red}{\textbf{C : }#1}
+    \IfValueT{#2}{\textcolor{blue}{\textbf{A1 : }#2}}
+    \IfValueT{#3}{\textcolor{ForestGreen}{\textbf{A2 : }#3}}
+    \IfValueT{#4}{\textcolor{red!50!blue}{\textbf{A3 : }#4}}
+    \IfValueT{#5}{\textcolor{Aquamarine}{\textbf{A4 : }#5}}
+ }{}
+}
+\newcommand{\todo}[1]{
+\ifthenelse{\draft=1}{\textcolor{red!50!blue}{\textbf{TODO : \textit{#1}}}}{}
+}
+
+\usepackage[flushleft]{threeparttable}
+\usepackage{multirow}
+
+\usepackage{listings}
+
+\usepackage{soul}
+\soulregister\cite7
+\soulregister\citep7
+\soulregister\ref7
+
+%\usepackage[final]{changes}
+\usepackage{changes}
+
+
+\setaddedmarkup{\textcolor{black}{\hl{#1}}}
+\setdeletedmarkup{\textcolor{red}{\sout{#1}}}
+
+
+\journal{Computers, Environment and Urban Systems}
+
 
 \begin{document}
 
-
 \begin{frontmatter}
-
-\dochead{}
 
 \title{Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models}
 
@@ -32,10 +61,11 @@
 \address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
 \address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
 \address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
-\address[f]{Université Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
+\address[f]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
 
 
-\cortext[cor1]{Corresponding author.}
+\cortext[cor1]{Corresponding author: juste.raimbault@polytechnique.edu}
+
 
 %\corrauth{Juste Raimbault, UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 %13 rue du Four,
@@ -92,8 +122,6 @@ Space \sep Initial conditions \sep Sensitivity \sep ABM \sep Validation
 \end{keyword}
 
 \end{frontmatter}
-
-\email{juste.raimbault@polytechnique.edu}
 
 
 %%%%%%%
@@ -171,7 +199,7 @@ In this paper, we build on these contributions and go further by systematically 
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
 
-The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on \replaced{meta-parameters and feeds the model $\mu$ at initialisation (lower branch)}{its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process}. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates to the model's parameters to how the density spatial distribution was generated and the pattern of density generated in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
+The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on \replaced{its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process}{meta-parameters and feeds the model $\mu$ at initialisation (lower branch)}. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates to the model's parameters to how the density spatial distribution was generated and the pattern of density generated in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] 
 \begin{center} 
@@ -402,38 +430,6 @@ We want to foster this extension of our work by releasing the density grids also
 As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions, that become senseless taken out of context. Geography and the social sciences in general have been in the last decades strongly influenced by insights from physics, that beside their highly enriching impact~\citep{o2015physicists}, may have softly imposed strong assumptions such as homogeneity and isotropy of space. We believe that a renewed approach on the role of space as we proposed, in other terms insisting that \emph{space matters}, is an opportunity the for social sciences to build their own stream of methodologies in the modelling domain.
 
 
-% \hfill \break
-% \itshape{This is a sub, subheading}\normalfont
-
-% \hfill\break
-
-%
-%
-%\begin{table}[htp]
-%
-%\begin{center}
-%\begin{tabular}{c c c c}
-%\arrayrulecolor{black}
-%\hline 
-%This & Is & A & Table\\
-%\arrayrulecolor{lightgray}
-%\hline 
-%\arrayrulecolor{black}
-%Label & 0.1 & 0.2 & 0.3\\
-%Label & 1.0 & 2.0 & 3.0\\
-%\hline
-%\end{tabular}
-%\end{center}
-%\label{first_table}
-%\caption{This is a table caption}
-%\end{table}%
-%
-%
-%
-%\begin{equation}
-%a^2 + b^2 = c^2
-%\tag*{Equation 1}
-%\end{equation}
 
 
 
