--- a/paper.tex
+++ b/paper.tex
@@ -344,7 +344,7 @@ In this qualitative exploration of the effect of initial spatial conditions on t
 \caption{\textbf{Regression of the segregation level of Schelling simulation with order parameters and type of city grid.}}
 \label{tab:regressionSchelling}
 %\begin{adjustwidth}{-1cm}{-1cm}
-\begin{tabular}{|m{2.5cm}|ll|ll|ll|}
+\begin{tabular}{|p{2.5cm}|ll|ll|ll|}
 \hline
 Simulation outcome by segregation index:    & \multicolumn{2}{c|}{\textbf{Dissimilarity}}   & \multicolumn{2}{c|}{\textbf{Entropy}} & \multicolumn{2}{c|}{\textbf{Moran's I}} \\ \hline
 \textbf{Intercept}                          & -0.212 *** & -0.141 ***                       & -0.254 ***        & -0.208 ***        & -0.036 ***           & -0.061 ***               \\ \hline
